day4/ingress/yaml/front-end.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment

spec:
  selector:
    matchLabels:
      software: frontend-webapp

  replicas: 2

  template:
    metadata:
      labels:
        software: frontend-webapp
    spec:
      containers:
        - name: front-end-web
          image: nevincleetus/frontend-python:v1

          ports:
            - containerPort: 80
