day4/ingress/yaml/backend-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backendapi-clusterip-service
spec:
  type: ClusterIP
  selector:
    software: backend-api

  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
~
~
