day4/ingress/yaml/frontend-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontendapi-clusterip-service
spec:
  selector:
    software: frontend-webapp

  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
