day4/ingress/yaml/ingress-resource-path.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: ingress-resource-path
spec:
  rules:
  - host: nginx.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: my-nginx-service
          servicePort: 80
      - path: /frontend
        backend:
          serviceName: frontendapi-clusterip-service
          servicePort: 80
      - path: /backend
        backend:
          serviceName: backendapi-clusterip-service
          servicePort: 5000
